--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -100,14 +100,13 @@
     background-color: #28a745;
 }
 
-/* Button Styling */
 .Itms .favorite-button {
     position: absolute;
     top: 10px;
     right: 10px;
     background: rgba(255, 255, 255, 0.8);
     border: 2px solid var(--secondary-color);
-    color: grey;
+    color: var(--primary-color);
     padding: 6px;
     padding-top: 2px;
     padding-bottom: 2px;
@@ -118,12 +117,10 @@
 }
 
 .Itms .favorite-button.active {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
+    color: var(--secondary-color);
     transform: scale(1.1);
 }
 
 .Itms .favorite-button:hover {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
+    color: var(--secondary-color);
 }
