--- a/src/Components/Login-Register/Modal.css
+++ b/src/Components/Login-Register/Modal.css
@@ -16,7 +16,7 @@
   padding: 20px;
   border-radius: 10px;
   position: relative;
-  width: 400px;
+  width: fit-content;
 }
 
 .login-modal-close {
@@ -29,6 +29,7 @@
   color: var(--secondary-color);
   cursor: pointer;
   transition: color 0.3s ease, transform 0.3s ease;
+  z-index: 1000;
 }
 
 .login-modal-close:hover {
