--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -28,7 +28,7 @@
 
 .checkout-button {
     background-color: var(--secondary-color);
-    border-color: var(--secondary-color);
+    border: none;
     font-size: 1.5rem;
     padding: 15px 40px;
     border-radius: 30px;
@@ -36,6 +36,7 @@
     margin: 0 auto;
     display: block;
     width: 50%;
+    color: var(--accent-color);
 }
 
 .checkout-button:hover {
@@ -108,4 +109,8 @@
     background-color: var(--secondary-color);
     border-color: var(--primary-color);
     color: var(--text-color);
+}
+
+.link{
+    text-decoration: none;
 }
