--- a/src/Components/ShowBrand/Brands.css
+++ b/src/Components/ShowBrand/Brands.css
@@ -7,7 +7,9 @@
 }
 
 .Brands-table {
-    width: 100%;
+    width: 80%;
+    margin-left: 240px;
+    margin-top: 30px;
     max-width: 1200px;
     background-color: #ffffff;
     border-radius: 8px;
@@ -19,6 +21,7 @@
     text-align: center;
     margin-bottom: 20px;
     color: #34495e;
+    font-size: 1.5rem;
 }
 
 .search-input {
@@ -69,6 +72,7 @@
     text-align: left;
     padding: 12px;
     border-bottom: 1px solid #ddd;
+    font-size: 1rem;
 }
 
 .Brands-container th {
@@ -132,4 +136,30 @@
 .pagination li.active a {
     background-color: #2980b9;
     color: white;
+}
+
+@media (max-width: 768px) {
+    .Brands-table th, .Brands-table td {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .Brands-table h1 {
+        font-size: 20px;
+    }
+
+    .Brands-table button {
+        padding: 6px 12px;
+        font-size: 12px;
+    }
+
+    .brand-image {
+        width: 30px;
+        height: 30px;
+    }
+
+    .image-preview {
+        width: 80px;
+        height: 80px;
+    }
 }
