--- a/src/Components/ShowColor/Colors.css
+++ b/src/Components/ShowColor/Colors.css
@@ -1,6 +1,5 @@
 .Colors-container {
     display: flex;
-    /* font-family: 'Playfair Display', serif; */
     flex-direction: column;
     align-items: center;
     background-color: #f4f6f9;
@@ -8,7 +7,9 @@
 }
 
 .Colors-table {
-    width: 100%;
+    width: 80%;
+    margin-left: 240px;
+    margin-top: 30px;
     max-width: 1200px;
     background-color: #ffffff;
     border-radius: 8px;
@@ -26,6 +27,7 @@
     padding: 15px;
     text-align: left;
     border-bottom: 1px solid #ddd;
+    font-size: 1rem;
 }
 
 .Colors-table th {
@@ -93,6 +95,7 @@
 .add-button:hover {
     background-color: #16a085;
 }
+
 .edit-button {
     background-color: #2980b9;
 }
@@ -133,4 +136,20 @@
 
 .pagination a:hover {
     background-color: #ddd;
+}
+
+@media (max-width: 768px) {
+    .Colors-table th, .Colors-table td {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .Colors-table h1 {
+        font-size: 20px;
+    }
+
+    .Colors-table button {
+        padding: 6px 12px;
+        font-size: 12px;
+    }
 }
