--- a/src/Components/ShowOrders/ShowOrder.css
+++ b/src/Components/ShowOrders/ShowOrder.css
@@ -8,9 +8,10 @@
 
 .showDetails-table {
     flex: 1;
-    width: 100%;
+    width: 80%;
+    margin-left: 200px;
+    margin-top: 30px;
     max-width: 1200px; /* Max width for better alignment */
-    margin: 0 auto;
     background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -23,6 +24,7 @@
     text-align: center;
     margin-bottom: 20px;
     color: #34495e;
+    font-size: 1.5rem;
 }
 
 /* Table Styles */
@@ -42,6 +44,7 @@
     overflow: hidden;
     text-overflow: ellipsis; /* Add ellipsis for overflowed text */
     max-width: 180px; /* Limit the width of cells to handle long data */
+    font-size: 1rem;
 }
 
 .showDetails-table th {
@@ -81,7 +84,7 @@
         font-size: 14px;
         padding: 10px;
     }
-    
+
     .showDetails-table h1 {
         font-size: 20px;
     }
