--- a/src/Components/ShowSell/ShowSellQueue.css
+++ b/src/Components/ShowSell/ShowSellQueue.css
@@ -7,13 +7,15 @@
 }
 
 .showDetails-table {
-    flex: 1;
-    width: 100%;
-    max-width: 1200px;
+    flex: 1 1;
+    width: 80% !important;
+    max-width: 1500px !important;
+    margin-left: 240px !important;
     background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    overflow-x: auto;
 }
 
 .showDetails-table h1 {
@@ -21,19 +23,22 @@
     text-align: center;
     margin-bottom: 20px;
     color: #34495e;
+    font-size: 1.5rem;
 }
 
-/* Table Styles */
+
 .showDetails-table table {
     width: 100%;
     border-collapse: collapse;
     background-color: #f9f9f9;
+    min-width: 1000px;
 }
 
 .showDetails-table th, .showDetails-table td {
     padding: 15px;
     text-align: left;
     border: 1px solid #ddd;
+    font-size: 1rem;
 }
 
 .showDetails-table th {
@@ -62,4 +67,20 @@
 
 .showDetails-table tr:hover {
     background-color: #f1f1f1;
+}
+
+@media (max-width: 768px) {
+    .showDetails-table th, .showDetails-table td {
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    .showDetails-table h1 {
+        font-size: 20px;
+    }
+
+    .showDetails-table button {
+        padding: 6px 12px;
+        font-size: 14px;
+    }
 }
