--- a/src/Components/ShowUsers/users.css
+++ b/src/Components/ShowUsers/users.css
@@ -1,6 +1,7 @@
 .user-table {
     width: 80%;
-    margin: 0 auto;
+    margin-left: 240px;
+    margin-top: 30px;
     border-collapse: collapse;
     padding: 20px;
     border-radius: 12px;
@@ -13,6 +14,7 @@
     text-align: center;
     margin-bottom: 20px;
     color: #34495e;
+    font-size: 1.5rem;
 }
 
 .user-table table {
@@ -25,6 +27,7 @@
     padding: 15px;
     text-align: left;
     border-bottom: 1px solid #ddd;
+    font-size: 1rem;
 }
 
 .user-table th {
@@ -103,4 +106,26 @@
 
 .table-wrapper {
     overflow-x: auto;
+}
+
+@media (max-width: 768px) {
+    .user-table th, .user-table td {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .User-ProfileImage {
+        width: 60px;
+        height: 60px;
+    }
+
+    .pagination li a {
+        padding: 8px 12px;
+        font-size: 14px;
+    }
+
+    .user-table button {
+        padding: 6px 12px;
+        font-size: 12px;
+    }
 }
